# Super

./: .env.example  .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RULES.md  agentsec.example.yaml  index.html  projects-inventory.md  pyproject.toml  superuser.example.yaml
.github/workflows/: merge-sync-audit.yml
docs/: INTEGRATIONS.md
src/superuser/: __init__.py  __main__.py  audit.py  authz.py  billing.py  config.py  guard.py  security.py  server.py
src/superuser/tools/: __init__.py  github.py  shell.py  system.py
tests/: test_guard.py
